[metadata]
name = vibpump
version = 0.1.0
description = personal python package
long_description = file: README.md
license_file = LICENSE

[options]
install_requires =
  numpy
  matplotlib
  opencv-python
python_requires = >=3.8.0
zip_safe = False
include_package_data = True
package_dir=
  =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  vibpump = vibpump.cli:main

[yapf]
based_on_style = google
indent_width = 2
column_limit = 88
split_complex_comprehension = on
